# pickwp

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  default.nix  default_config.toml  default_config.yml  deny.toml  flake.nix  release.nix  shell.nix
.github/workflows/: main.yml
migrations/: V1__schema.sql
nix/: sources.json
sql/: schema.sql
src/: cache.rs  cfg.rs  cli.rs  client.rs  command.rs  config.rs  daemon.rs  data.rs  db.rs  filter.rs  ipc.rs  lockfile.rs  macros.rs  main.rs  monitor.rs  rpc.rs  scan.rs  storage.rs  unix.rs  util.rs  watch_file.rs
src/rpc/: client.rs  server.rs  tarpc_unix_transport.rs  tonic_uds_shim.rs
