[package]
name = "pickwp"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["rt-core", "signal", "sync", "time", "blocking", "stream", "fs", "macros"] }
snafu = "0.6.8"
futures-util = "0.3.5"
serde = { version = "1.0.115", features = ["derive"] }
phf = { version = "0.8.0", features = ["macros"] }
humantime-serde = "1.0.0"
tgcd = { git = "https://github.com/foldu/tgcd", rev = "267f03adb3b39031f0c02ce7920228189004591b", default-features = false }
directories = "3.0.1"
inotify = "0.8.3"
once_cell = "1.4.1"
tokio-i3ipc = "0.10.0"
structopt = "0.3.16"
anyhow = "1.0.32"
nix = "0.18.0"
libc = "0.2.76"
walkdir = "2.3.1"
rayon = "1.3.1"
tarpc = { version = "0.22.0", features = ["tokio1", "serde-transport", "serde1"] }
tokio-serde = { version = "0.6.1", default-features = false, features = ["json"] }
pin-project = "0.4.23"
async-trait = "0.1.38"
toml = "0.5.6"
time = "0.2.16"
serde_json = "1.0.57"
derive_more = "0.99.11"
tracing = "0.1.19"
tracing-subscriber = "0.2.11"
humantime = "2.0.1"

[dependencies.sqlx]
# https://github.com/launchbadge/sqlx/issues/616
git = "https://github.com/Patryk27/sqlx"
rev = "fe1570c74e39614a70426cc4acddd3badfad4faa"
default-features = false
features = ["sqlite", "macros", "runtime-tokio", "migrate"]

[dependencies.openssl]
version = "0.10.30"
features = [
    "vendored"
]

[build-dependencies]
serde = "1.0.115"
structopt = "0.3.16"
