[package]
name = "pickwp"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["rt-core", "signal", "sync", "time", "blocking", "stream", "fs", "macros"] }
snafu = "0.6.9"
futures-util = "0.3.6"
serde = { version = "1.0.116", features = ["derive"] }
phf = { version = "0.8.0", features = ["macros"] }
humantime-serde = "1.0.1"
tgcd = { git = "https://github.com/foldu/tgcd", rev = "267f03adb3b39031f0c02ce7920228189004591b", default-features = false }
directories = "3.0.1"
inotify = "0.8.3"
once_cell = "1.4.1"
structopt = "0.3.20"
anyhow = "1.0.33"
nix = "0.19.0"
libc = "0.2.79"
walkdir = "2.3.1"
rayon = "1.4.1"
tarpc = { version = "0.22.0", features = ["tokio1", "serde-transport", "serde1"] }
tokio-serde = { version = "0.6.1", default-features = false, features = ["json"] }
pin-project = "1.0.0"
async-trait = "0.1.41"
toml = "0.5.7"
time = "0.2.22"
serde_json = "1.0.59"
derive_more = "0.99.11"
tracing = "0.1.21"
tracing-subscriber = "0.2.14"
humantime = "2.0.1"

[dependencies.sqlx]
# https://github.com/launchbadge/sqlx/issues/616
git = "https://github.com/launchbadge/sqlx"
rev = "fa7981f68a95d4cddbb07843af62b41c730ee0a3"
default-features = false
features = ["sqlite", "macros", "runtime-tokio", "migrate"]

[dependencies.tokio-i3ipc]
git = "https://github.com/leshow/tokio-i3ipc"
rev = "f6e901ebdd0f33062ff5f7796e023d9e6f1e05fa"
features = ["sway"]

[dependencies.openssl]
version = "0.10.30"
features = [
    "vendored"
]

[build-dependencies]
serde = "1.0.116"
structopt = "0.3.20"

# just used to remove openssl from the binary
[profile.release]
lto = "fat"
codegen-units = 1
